@@ -425,6 +425,7 @@ typedef enum _Evas_Callback_Type
    EVAS_CALLBACK_HOLD, /**< Events go on/off hold */
    EVAS_CALLBACK_CHANGED_SIZE_HINTS, /**< Size hints changed event */
    EVAS_CALLBACK_IMAGE_PRELOADED, /**< Image has been preloaded */
+   EVAS_CALLBACK_IMAGE_RESIZE, /**< Image size is changed @since 1.8 */
 
    /*
     * The following events are only for use with Evas canvases, with
